testing and fixing bugs